.metadata/.plugins/org.eclipse.cdt.ui/20.const_class.build.log
21:51:47 **** Incremental Build of configuration Debug for project 20.const_class ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o const_class.o "..\\const_class.cpp" 
..\const_class.cpp: In function 'int main()':
..\const_class.cpp:20:8: error: 'a' does not name a type
  const a;
        ^

21:51:47 Build Finished (took 190ms)

